# time12

./: .gitignore  CMakeLists.txt  README.md
.github/: FUNDING.yaml
.github/workflows/: release.yml
doc/: macos-readme.txt
src/: Globals.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Presets.h
src/dsp/: Delay.cpp  Delay.h  Filter.cpp  Filter.h  Pattern.cpp  Pattern.h  Transient.cpp  Transient.h
src/ui/: About.cpp  About.h  AudioDisplay.cpp  AudioDisplay.h  CustomLookAndFeel.cpp  CustomLookAndFeel.h  GridSelector.cpp  GridSelector.h  Multiselect.cpp  Multiselect.h  PaintTool.cpp  PaintTool.h  PaintToolWidget.cpp  PaintToolWidget.h  Rotary.cpp  Rotary.h  Sequencer.cpp  Sequencer.h  SequencerWidget.cpp  SequencerWidget.h  SettingsButton.cpp  SettingsButton.h  TextDial.cpp  TextDial.h  View.cpp  View.h
src/utils/: PatternManager.cpp  PatternManager.h
